--- a/style.css
+++ b/style.css
@@ -982,12 +982,7 @@ h5 {
     top: 0;
     left: 0;
     z-index: 1;
-    -webkit-transform: rotate(-90deg);
-    mask-image: radial-gradient(circle, white 100%, transparent 100%);
-    -webkit-mask-image: radial-gradient(circle, white 100%, transparent 100%);
-      -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  
+   
 
 }
 
@@ -1038,12 +1033,12 @@ h5 {
         height: 100px;
     }
 
-    .progress-ring-circle {
+/*     .progress-ring-circle {
         cx: 50;
         cy: 50;
         r: 44;
     }
-
+ */
     .percent {
         font-size: 20px;
     }
@@ -1069,12 +1064,12 @@ h5 {
         height: 80px;
     }
 
-    .progress-ring-circle {
+/*     .progress-ring-circle {
         cx: 40;
         cy: 40;
         r: 34;
     }
-
+ */
     .percent {
         font-size: 18px;
     }
