--- a/style.css
+++ b/style.css
@@ -1106,6 +1106,7 @@ h5 {
 .footer {
     width: 100%;
     height: 15vh;
+    /* border: 2px solid red; */
 }
 
 .under-footer {
@@ -1198,6 +1199,8 @@ footer {
         padding: 12px 15px;
         flex-direction: column;
         gap: 10px;
+        position: relative;
+        top: 5rem;
     }
 
     .footer-content {
