--- a/style.css
+++ b/style.css
@@ -6,7 +6,52 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
+/* Fullscreen Loader */
+#loader {
+    position: fixed;
+    inset: 0; 
+    background-color:  rgb(5, 29, 43);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease;
+  }
+  
+  /* Spinner */
+  .spinner {
+    width: 60px;
+    height: 60px;
+    border: 6px solid transparent;
+    border-top: 6px solid white; /* Orange */
+    border-right: 6px solid rgb(19, 77, 110); /* Red */
+    border-bottom: 6px solid white; /* Green */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .spinner {
+      width: 50px;
+      height: 50px;
+      border-width: 5px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border-width: 4px;
+    }
+  }
+  
 html {
     height: 100%;
     width: 100%;
