--- a/style.css
+++ b/style.css
@@ -7,50 +7,33 @@
     font-family: 'Poppins', sans-serif;
 }
 /* Fullscreen Loader */
-#loader {
-    position: fixed;
-    inset: 0; 
-    background-color:  rgb(5, 29, 43);
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.5s ease;
-  }
-  
-  /* Spinner */
-  .spinner {
-    width: 60px;
-    height: 60px;
-    border: 6px solid transparent;
-    border-top: 6px solid white; /* Orange */
-    border-right: 6px solid rgb(19, 77, 110); /* Red */
-    border-bottom: 6px solid white; /* Green */
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    to {
-      transform: rotate(360deg);
+ #loader {
+      position: fixed;
+      inset: 0;
+      background-color: rgb(5, 29, 43);
+      z-index: 999999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: opacity 0.5s ease;
     }
-  }
-  
-  @media (max-width: 768px) {
+
     .spinner {
-      width: 50px;
-      height: 50px;
-      border-width: 5px;
+      width: 60px;
+      height: 60px;
+      border: 6px solid transparent;
+      border-top: 6px solid white;
+      border-right: 6px solid rgb(19, 77, 110);
+      border-bottom: 6px solid white;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
     }
-  }
-  
-  @media (max-width: 480px) {
-    .spinner {
-      width: 40px;
-      height: 40px;
-      border-width: 4px;
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
     }
-  }
   
 html {
     height: 100%;
@@ -965,7 +948,7 @@ h5 {
 /* Experiance section*/
 .fluid-container-four {
     width: 100%;
-    height: 65vh;
+    height: 85vh;
     /* border: 2px solid aqua; */
 }
 
