--- a/style.css
+++ b/style.css
@@ -1382,6 +1382,13 @@ footer {
 }
 
 /* Responsive Design */
+@media (max-width:720) {
+     #four-one{
+        position: relative;
+        top: 13rem;
+    }
+    
+}
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
