--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Carter+One&family=Caveat:wght@400..700&family=Cinzel:wght@400..900&family=Dancing+Script:wght@700&family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -49,6 +49,7 @@ html {
     height: 100%;
     width: 100%;
     background-color: rgb(5, 29, 43);
+
 }
 
 #logo {
@@ -57,6 +58,7 @@ html {
 
 nav {
     width: 100%;
+
 }
 
 .navmenu ul {
@@ -135,6 +137,42 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 
 a {
     text-decoration: none;
+
+}
+#h-type{
+ font-family: "Cinzel", serif;
+}
+#h2{
+     font-family: "Cinzel", serif;
+}
+li{
+     font-family: "Cinzel", serif;
+}
+#btn{
+     font-family: "Cinzel", serif;
+}
+h1{
+     font-family: "Cinzel", serif;
+}
+#btn-three{
+
+     font-family: "Cinzel", serif;
+}
+#title{
+     font-family: "Cinzel", serif;
+}
+.submit-btn{
+     font-family: "Cinzel", serif;
+}
+.footer-content{
+  font-family: "Dancing Script", cursive;
+}
+.para-one{
+      font-family: "Dancing Script", cursive;
+  font-family: "Allerta Stencil", sans-serif;
+  font-family: "Work Sans", sans-serif;
+
+
 }
 
 .off-screen-menu {
