--- a/style.css
+++ b/style.css
@@ -1048,7 +1048,7 @@ h5 {
     width: 100%;
     height: 90vh;
     background-color: #032a3acc;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 
 
 }
@@ -1295,6 +1295,12 @@ footer {
         height: 18px;
     }
 }
+@media only screen and (max-height: 812px) {
+    .fluid-container-five {
+        top: 3rem; /* 9rem → 3rem uper = 6rem */
+    }
+}
+
 
 @media (max-width: 480px) {
     .child-seven h1 {
